# swiftbar-plugins

./: .gitignore  .swiftbarignore  Makefile  README.md  ai_token_usage.1m.py  docker_containers.1m.py  hsx.1d.py  pager_duty_schedule.1h.py  pyproject.toml  tomcat_running.1m.py
.github/workflows/: run-tests.yml
plugins/: ai_token_usage.1m.py  hsx.1d.py  pager_duty_schedule.1h.py
tests/: test_plugin.py
